app-pods/app-back.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-back
  labels:
    app: app-back
spec:
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  minReadySeconds: 20
  replicas: 3
  selector:
    matchLabels:
      app: app-back
      tier: back
  template:
    metadata:
      labels:
        app: app-back
        tier: back
    spec:
      containers:
        - image: docker.io/rlarlgkd/fm3back:7
          name: app-back
          resources:
            requests:
              cpu: 100m
              memory: 200Mi
            limits:
              cpu: 300m
              memory: 400Mi
          ports:
          - containerPort: 5000
