app-pods/app-front.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-front
  labels:
    app: app-front
spec:
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  minReadySeconds: 20
  replicas: 3
  selector:
    matchLabels:
      app: app-front
      tier: front
  template:
    metadata:
      labels:
        app: app-front
        tier: front
    spec:
      affinity:
        podAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - weight: 80
            podAffinityTerm:
              labelSelector:
                matchExpressions:
                - key: tier
                  operator: In
                  values:
                  - back
              topologyKey: "kubernetes.io/hostname"
      containers:
        - name: app-front
          image: docker.io/rlarlgkd/fm3front:13
          resources:
            requests:
              cpu: 100m
              memory: 200Mi
            limits:
              cpu: 300m
              memory: 400Mi
          ports:
          - containerPort: 3000
