app-pods/app-clu.yaml
apiVersion: v1
kind: Service
metadata:
  name: myapp-svc-flask
spec:
  ports:
  - port: 5000
    targetPort: 5000
  clusterIP: None
  selector:
    app: app-back
